Fix screenshot white space and allow targeted screenshots to be toggled via config

--- a/web/schedule.css
+++ b/web/schedule.css
@@ -72,6 +72,8 @@ body {
       rgba(1, 1, 1, 0.19) 69px),
     linear-gradient(90deg, rgb(113, 16, 192),
       rgb(59, 18, 66));
+  margin: 0;
+  padding: 0;
 }
 
 .past-event {
@@ -241,6 +243,18 @@ h6 {
   margin-top: 15px;
   margin-bottom: 25px;
 }
+
+/* 
+#facts {
+  //display: inline-block; 
+  padding: 10px 10px 10px 15px;
+  right: 10px;
+  margin-left: 50%;
+  width: 45%;
+  background-color: rgba(0, 0, 0, 0.568);
+  margin-top: 15px;
+  margin-bottom: 25px;
+} */
 
 #facts p {
   padding-left: 15px;
